syntax = "proto3";

option go_package = "gitlab.com/lemmyGo/lemmyGoUsers/proto";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse { string message = 1; }

message RegistrationRequest {
  string email = 1;
  string password = 2;

}

message RegistrationResponse { string message = 1; }

service users {
  rpc login(LoginRequest) returns (LoginResponse);
  rpc register(RegistrationRequest) returns (RegistrationResponse);
}
